--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,4 +3,4 @@
 
 @import "{{ site.theme }}";
 /* Material design */
-@import "https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css";
+@import url("https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css");
