--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <form class="ingredient_list" action="#">
-  {% for ingredient_name in page.ingredients %}
+  {% for ingredient_name in page.ingredients_list %}
   <p>
       <label>
         <input type="checkbox" />
