--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,39 @@
 .ingredient {
  font-size: 125% !important; /* Add `!important` at the end of a rule to prioritise it. */
 }
+
+fieldset.group  { 
+  margin: 0; 
+  padding: 0; 
+  margin-bottom: 1.25em; 
+  padding: .125em; 
+} 
+
+fieldset.group legend { 
+  margin: 0; 
+  padding: 0; 
+  font-weight: bold; 
+  margin-left: 2em; 
+} 
+
+
+ul.checkbox  {
+  margin: 0;
+  padding: 0;
+  margin-left: 1em;
+  list-style: none; 
+}
+
+ul.checkbox li input {
+  margin-right: .25em; 
+}
+
+ul.checkbox li {
+ border: 1px transparent solid;
+ float: left;
+ min-width: 15em;
+}
+
+ul.checkbox li label {
+  margin-left: 0.2em; 
+}
