--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -7,7 +7,7 @@ layout: default
   {% for ingredient in page.ingredients_list %}
   {% assign ingredient_data = ingredient | split: "@" %}
   {% assign ingredient_name = ingredient_data[0] %}
-  {% assign ingredient_quantity = ingredient_data[1] "@" %}
+  {% assign ingredient_quantity = ingredient_data[1] %}
   <li>
     <p>
       <label>
