--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+  <!-- Commit: {{ site.github.build_revision }} -->
+
+
     <!-- Material design CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Material design JavaScript -->
