--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,13 @@ ul.checkbox li label {
   margin-left: 0.2em; 
 } */
 
+fieldset.group legend { 
+  margin: 0; 
+  padding: 0; 
+  font-weight: bold; 
+  margin-left: 20px; 
+  font-size: 150%;
+
 .ingredient {
   /* font-weight: lighter; */
 }
