--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,6 +39,42 @@ ul.checkbox li label {
   margin-left: 0.2em; 
 } */
 
+.section-header {
+	position: relative;
+	text-align: center;
+}
+
+.section-header:before {
+	content: '';
+	z-index: 1;
+
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+
+	width: 100%;
+	height: 1px;
+
+	background: #dddddd;
+}
+
+	.section-header__title {
+		position: relative;
+		z-index: 2;
+
+		background: #fafafa;
+		padding: 5px 20px;
+
+		font-weight: 300;
+		font-size: 150%;
+		text-transform: uppercase;
+
+		display: inline-block;
+
+		color: #444444;
+	}
+
 fieldset.group legend { 
   margin: 0; 
   padding: 0; 
