--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -2,8 +2,30 @@
 layout: default
 ---
 <fieldset class="group">
-<legend> {{ page.ingredients_group_name }} </legend> 
+   <div class="section-header">
+	   <span class="section-header__title">Base dough</span>
+   </div>
+<legend></legend> 
 <ul class="ingredients_list checkbox"> 
+  {% for ingredient in page.ingredients_list %}
+  {% assign ingredient_data = ingredient | split: "@" %}
+  {% assign ingredient_name = ingredient_data[0] %}
+  {% assign ingredient_quantity = ingredient_data[1] %}
+  <li>
+    <p>
+      <label>
+        <input type="checkbox" />
+        <span class="ingredient">
+          <span class="ingredient_quantity">{{ ingredient_quantity }}</span>
+          {{ ingredient_name }}
+        </span>
+      </label>
+    </p>
+  </li>
+  {% endfor %}
+</ul>
+  
+<ul class="ingredients_list_1 checkbox"> 
   {% for ingredient in page.ingredients_list %}
   {% assign ingredient_data = ingredient | split: "@" %}
   {% assign ingredient_name = ingredient_data[0] %}
