--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,42 @@ fieldset.group legend {
   font-size: 150%;
  }
 
+.section-header {
+	position: relative;
+	text-align: center;
+}
+
+.section-header:before {
+	content: '';
+	z-index: 1;
+
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+
+	width: 100%;
+	height: 1px;
+
+	background: #dddddd;
+}
+
+	.section-header__title {
+		position: relative;
+		z-index: 2;
+
+		background: #fafafa;
+		padding: 5px 20px;
+
+		font-weight: 300;
+		font-size: 150%;
+		text-transform: uppercase;
+
+		display: inline-block;
+
+		color: #444444;
+	}
+
 .ingredient {
   /* font-weight: lighter; */
 }
@@ -59,6 +95,10 @@ fieldset.group legend {
 }
 
 .ingredients_list {
+  columns: 1;
+}
+
+.ingredients_list_1 {
   columns: 1;
 }
 
@@ -78,6 +118,10 @@ li:first-child {
 
 @media (min-width: 500px) {
   .ingredients_list {
+    columns: 2;
+  }
+ @media (min-width: 500px) {
+  .ingredients_list_1 {
     columns: 2;
   }
 }
