--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -26,7 +26,7 @@ layout: default
 </ul>
   
 <ul class="ingredients_list_1 checkbox"> 
-  {% for ingredient in page.ingredients_list %}
+  {% for ingredient in page.ingredients_list_1 %}
   {% assign ingredient_data = ingredient | split: "@" %}
   {% assign ingredient_name = ingredient_data[0] %}
   {% assign ingredient_quantity = ingredient_data[1] %}
