--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -25,6 +25,11 @@ layout: default
   {% endfor %}
 </ul>
   
+
+<div class="section-header">
+   <span class="section-header__title">Base dough</span>
+ </div>
+	
 <ul class="ingredients_list_1 checkbox"> 
   {% for ingredient in page.ingredients_list_1 %}
   {% assign ingredient_data = ingredient | split: "@" %}
