--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -31,7 +31,7 @@ layout: default
    <span class="section-header__title">Base dough</span>
  </div>
 
-<ul class="ingredients_list_1 checkbox"> 
+<ul class="ingredients_list checkbox"> 
   {% for ingredient in page.ingredients_list_1 %}
   {% assign ingredient_data = ingredient | split: "@" %}
   {% assign ingredient_name = ingredient_data[0] %}
