--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -32,7 +32,7 @@ layout: default
  </div>
 
 <ul class="ingredients_list checkbox"> 
-  {% for ingredient in page.ingredients_list_1 %}
+  {% for ingredient in page.ingredients_list %}
   {% assign ingredient_data = ingredient | split: "@" %}
   {% assign ingredient_name = ingredient_data[0] %}
   {% assign ingredient_quantity = ingredient_data[1] %}
