--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-  <!-- Commit: {{ site.github.build_revision }} -->
-
-
-    <!-- Material design CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Material design JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/css/custom.css?v=' | append: site.github.build_revision | relative_url }}">
-  </head>
-  <body>
-    <main id="content" class="main-content" role="main">
+{% include header.html %}
       {{ content }}
-    </main>
-  </body>
-</html>
+{% include footer.html %}
