--- a/_layouts/ingredients_list.html
+++ b/_layouts/ingredients_list.html
@@ -27,6 +27,7 @@ layout: default
 
    <div class="section-header">
 	   <span class="section-header__title">{{ page.ingredients_group_name }}</span>
+	</div>
 {% include complex_ingredient_list.html %}
 
 </fieldset> 
