--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,7 +40,7 @@ ul.checkbox li label {
 } */
 
 fieldset.group  { 
-  border-color: #dddddd; 
+  border-color: #ffff00; 
 } 
 
 fieldset.group legend { 
