--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ '/assets/css/custom.css?v=' | append: site.github.build_revision | relative_url }}">
+    <!-- Custom JS -->
+    <script src="{{ '/assets/js/main_script.js?v=' | append: site.github.build_revision | relative_url }}"></script>
   </head>
   <body>
     <main id="content" class="main-content" role="main">
