--- a/templates/default.html
+++ b/templates/default.html
@@ -16,7 +16,7 @@
   <body>
     <main id="content" class="main-content" role="main">
       
-      <p>Test</p>
+      <p>Tost</p>
       
     </main>
   </body>
