--- a/templates/default.html
+++ b/templates/default.html
@@ -2,6 +2,7 @@
 <html lang="{-{ site.lang | default: "en-US" }}">
   <head>
   <!-- Commit: {-{ site.github.build_revision }} -->
+  <!-- Data: {{ data }} -->
 
 
     <!-- Material design CSS -->
