--- a/templates/default.html
+++ b/templates/default.html
@@ -17,7 +17,7 @@
   <body>
     <main id="content" class="main-content" role="main">
       
-      <p>Tost</p>
+      <p>Bob</p>
       
     </main>
   </body>
