--- a/templates/default.html
+++ b/templates/default.html
@@ -2,7 +2,11 @@
 <html lang="{-{ site.lang | default: "en-US" }}">
   <head>
   <!-- Commit: {-{ site.github.build_revision }} -->
-  <!-- Data: {{ data }} -->
+  <!-- 
+Data: 
+{{ data }} 
+
+-->
 
 
     <!-- Material design CSS -->
